syntax="proto3";

package api.auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package="github.com/markgenuine/auth/pkg/auth_v1;auth_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "Konstantin Ivanov"
      email: "mrkgeniy@gmail.com"
    };
  };

  host : "localhost:50661",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {

  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/auth/v1"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/auth/v1"
    };
  }

  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/auth/v1"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/auth/v1"
    };
  }

}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateRequest {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 250}];
  string email = 2 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string = {min_len: 1, max_len: 200}];
  string password_confirm = 4 [(validate.rules).string = {min_len: 1, max_len: 200}];
  Role role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  optional google.protobuf.StringValue name = 2 [(validate.rules).string = {min_len: 1, max_len: 250}];
  optional google.protobuf.StringValue email = 3 [(validate.rules).string.email = true];
  Role role = 4;
}

message DeleteRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}


